--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "haokuwidget",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/main.js",
+    "build": "rd /s /q dist && mkdir dist && tsc -p tsconfig.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@types/scriptable-ios": "^1.6.5"
   }
 }
